--- a/code/Project_1.ipynb
+++ b/code/Project_1.ipynb
@@ -7,13 +7,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Configure Jupyter so figures appear in the notebook\n",
     "%matplotlib inline\n",
-    "\n",
+    "#Adding some stuff\n",
     "# Configure Jupyter to display the assigned value after an assignment\n",
     "%config InteractiveShell.ast_node_interactivity='last_expr_or_assign'\n",
     "\n",
