adding HIV model

--- a/code/chap01.ipynb
+++ b/code/chap01.ipynb
@@ -103,7 +103,15 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "If this cell runs successfully, it produces no output other than this message.\n"
+     ]
+    }
+   ],
    "source": [
     "# Configure Jupyter so figures appear in the notebook\n",
     "%matplotlib inline\n",
@@ -478,7 +486,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
