Updating project_2 and adding Project_2-Copy1 for testing. Need to fix the infection rate (The rate at which they recover specifically)

--- a/code/Project_2-Copy1.ipynb
+++ b/code/Project_2-Copy1.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,15 +82,10 @@
     "    S8 = sleepEight*TotalPopulation\n",
     "    S9 = sleepNine*TotalPopulation \n",
     "    \n",
-    "    I5 = sleepFive * TotalPopulation * infectedInitial\n",
-    "    I6 = sleepSix * TotalPopulation * infectedInitial\n",
-    "    I7 = sleepSeven * TotalPopulation * infectedInitial\n",
-    "    I8 = sleepEight * TotalPopulation * infectedInitial\n",
-    "    I9 = sleepNine * TotalPopulation * infectedInitial\n",
+    "    I = TotalPopulation * infectedInitial\n",
     "    \n",
     "    init = State(S5=S5, S6=S6, S7=S7, S8=S8, S9=S9, \n",
-    "                 I5=I5, I6=I6, I7=I7, I8=I8, I9=I9, \n",
-    "                 R=0)\n",
+    "                 I=I, R=0)\n",
     "    t0 = 0\n",
     "    t_end = 7 * 14\n",
     "    \n",
@@ -111,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {
     "scrolled": true
    },
@@ -246,7 +241,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -272,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -285,45 +280,43 @@
     "    \n",
     "    returns: pair of derivatives\n",
     "    \"\"\" \n",
-    "    s5, s6, s7, s8, s9, i5, i6, i7, i8, i9, r = state\n",
+    "    #s5, s6, s7, s8, s9, i5, i6, i7, i8, i9, r = state\n",
+    "    s5, s6, s7, s8, s9, i, r = state\n",
     "    unpack(system)\n",
     "    \n",
     "    s = s5 + s6 + s7 + s8 + s9 # Total susceptible\n",
-    "    i = i5 + i6 + i7 + i8 + i9 # Total infected\n",
+    "    #i = i5 + i6 + i7 + i8 + i9 # Total infected\n",
     "    \n",
-    "    #VERIFY: Check: total change in infected = -(total change in susceptible) - (total change in recovered)\n",
     "    ds5dt = -(beta*beta5) * i * (s5/s) #The change in the 5 hour of susceptible sleep group = infection rate * total infected * percent of susceptible that have 5 hours of sleep\n",
-    "    di5dt = ds5dt - gamma * (i5/i) #Change in 5 hour of sleep infected group = change in susceptible group becoming infected - (recovery rate * percentage of infected that have 5 hours of sleep)\n",
+    "    #di5dt = ds5dt - gamma * (i5/i) #Change in 5 hour of sleep infected group = change in susceptible group becoming infected - (recovery rate * percentage of infected that have 5 hours of sleep)\n",
     "    \n",
     "    ds6dt = -(beta*beta6) * i * (s6/s)\n",
-    "    di6dt = ds6dt - gamma * (i6/i)\n",
+    "    #di6dt = ds6dt - gamma * (i6/i)\n",
     "    \n",
     "    ds7dt = -(beta*beta7) * i * (s7/s)\n",
-    "    di7dt = ds7dt - gamma * (i7/i)\n",
+    "    #di7dt = ds7dt - gamma * (i7/i)\n",
     "    \n",
     "    ds8dt = -(beta*beta8) * i * (s8/s)\n",
-    "    di8dt = ds8dt - gamma * (i8/i)\n",
+    "    #di8dt = ds8dt - gamma * (i8/i)\n",
     "    \n",
     "    ds9dt = -(beta*beta9) * i * (s9/s)\n",
-    "    di9dt = ds9dt - gamma * (i9/i)\n",
-    "\n",
-    "    drdt = gamma * i\n",
+    "    #di9dt = ds9dt - gamma * (i9/i)\n",
     "    \n",
-    "    print('Check to make sure Total Infected Change = -(Total Susceptible Change) - (Total Recovered Change)')\n",
     "    TotalSchange = ds5dt + ds6dt + ds7dt + ds8dt + ds9dt\n",
-    "    TotalIchange = di5dt + di6dt + di7dt + di8dt + di9dt\n",
-    "    print('Total Infected Change = ' , TotalIchange)\n",
+    "    didt = -TotalSchange - gamma * i\n",
+    "    drdt = gamma * i\n",
+    "   \n",
+    "    print('Check to make sure Total Infected Change = -(Total Susceptible Change) - (Total Recovered Change)')\n",
     "    print('-(Total Susceptible Change) - (Total Recoverd Change) = ' , -TotalSchange - drdt)\n",
-    "    #dsdt = -beta * i * s \n",
-    "    #didt = beta * i * s - gamma * i\n",
-    "    #drdt = gamma * i\n",
+    "    print('Total Infected Change = ' , didt)\n",
     "    \n",
-    "    return ds5dt, di5dt, ds6dt, di6dt, ds7dt, di7dt, ds8dt, di8dt, ds9dt, di9dt, drdt"
+    "    #return ds5dt, di5dt, ds6dt, di6dt, ds7dt, di7dt, ds8dt, di8dt, ds9dt, di9dt, drdt\n",
+    "    return ds5dt, ds6dt, ds7dt, ds8dt, ds9dt, didt, drdt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -331,27 +324,23 @@
      "output_type": "stream",
      "text": [
       "Check to make sure Total Infected Change = -(Total Susceptible Change) - (Total Recovered Change)\n",
-      "Total Infected Change =  -18.065500000000004\n",
-      "-(Total Susceptible Change) - (Total Recoverd Change) =  5.315500000000002\n"
+      "-(Total Susceptible Change) - (Total Recoverd Change) =  5.315500000000004\n",
+      "Total Infected Change =  5.315500000000004\n"
      ]
     },
     {
      "data": {
       "text/plain": [
        "(-2.1645000000000003,\n",
-       " -2.1895000000000002,\n",
-       " -1.9980000000000002,\n",
-       " -2.023,\n",
+       " -1.9979999999999998,\n",
        " -1.8315000000000003,\n",
-       " -1.8565000000000003,\n",
        " -9.990000000000002,\n",
-       " -10.140000000000002,\n",
        " -1.8315000000000003,\n",
-       " -1.8565000000000003,\n",
-       " 12.500000000000002)"
+       " 5.315500000000004,\n",
+       " 12.5)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -362,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -411,24 +400,8 @@
        "      <td>100.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>I5</th>\n",
-       "      <td>5.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>I6</th>\n",
-       "      <td>5.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>I7</th>\n",
-       "      <td>5.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>I8</th>\n",
-       "      <td>30.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>I9</th>\n",
-       "      <td>5.0</td>\n",
+       "      <th>I</th>\n",
+       "      <td>50.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>R</th>\n",
@@ -444,16 +417,12 @@
        "S7    100.0\n",
        "S8    600.0\n",
        "S9    100.0\n",
-       "I5      5.0\n",
-       "I6      5.0\n",
-       "I7      5.0\n",
-       "I8     30.0\n",
-       "I9      5.0\n",
+       "I      50.0\n",
        "R       0.0\n",
        "dtype: float64"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -464,42 +433,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'results' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-5-93a479bf92ff>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mresults\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mplot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'results' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "results.plot()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'system' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-6-17c981c1fd0d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mresults\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdetails\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mrun_ode_solver\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msystem\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mslope_func\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmax_step\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mdetails\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'system' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "results, details = run_ode_solver(system, slope_func, max_step = 2)\n",
     "details"
