--- a/code/chap13ode.ipynb
+++ b/code/chap13ode.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -262,7 +262,7 @@
        "4  0.972541  0.014970  0.012488"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -320,7 +320,7 @@
        "0.25"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -376,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -405,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -496,7 +496,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -556,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -565,7 +565,7 @@
        "array([0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1. , 1.1])"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -583,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -592,7 +592,7 @@
        "[0.2, 0.4, 0.6, 0.8]"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -610,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -655,7 +655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -675,21 +675,30 @@
     "    didt = beta * i * s - gamma * i\n",
     "    drdt = gamma * i\n",
     "    \n",
+    "    print (-dsdt-drdt)\n",
+    "    \n",
     "    return dsdt, didt, drdt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.0008811111111111112\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "(-0.01208641975308642, 0.009308641975308642, 0.002777777777777778)"
+       "(-0.003658888888888889, 0.0008811111111111112, 0.002777777777777778)"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -700,7 +709,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -767,7 +776,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -778,7 +787,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -854,7 +863,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -866,16 +875,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7f7f093d4828>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f2fa53aadd8>"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     },
