Added more descriptions for the Project 2 computational essay

--- a/code/Project_2.ipynb
+++ b/code/Project_2.ipynb
@@ -6,33 +6,49 @@
    "source": [
     "# Project 2\n",
     "\n",
-    "Griffith and Becca"
+    "Griffith Stites and Becca Suchower"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Q: How does not getting an appropriate of sleep affect the spread of sickness?\n",
+    "# Question\n",
+    "## How does the amount of sleep in a population affect the spread of illness throughout that population?\n",
     "\n",
-    "An inappropriate amount of sleep - either too little or too much - can weaken the immune system. This can make it easier for individuals to become infected by a sickness. This model aims to determine how having different percentages of the population with different amounts of sleep affects the spread of a sickness accross that population.\n",
+    "Several studies have linked immune system activity to amount of sleep.  An inappropriate amount of sleep - either too little or too much - can weaken the immune system. This can make it easier for individuals to become infected by a sickness. This model aims to determine how having different percentages of the population with different amounts of sleep affects the spread of a sickness accross that population.\n",
     "\n",
-    "# To Do\n",
+    "### To Do\n",
     "* Fix slope function\n",
     "* Survey with Olin students, how much sleep do they get?\n",
     "* Implement number of Olin students into total enrollment (335). Make sure to prevent fractional students!"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We based our assumptions on a study from 2012, titled \"A Prospective Study of Sleep Duration and Pneumonia Risk in Women\" (https://academic.oup.com/sleep/article/35/1/97/2453920).\n",
+    "\n",
+    "This study recorded the average nightly hours of sleep from ≤ 5, 6, 7, 8, and ≥ 9 hours.  The number of participants for each sleep category was recorded, along with the number of pneumonia cases for each group.\n",
+    "\n",
+    "Using this data, we assumed that immune system function and sleep duration were linked.\n",
+    "\n",
+    "Table 1: https://academic.oup.com/view-large/77947225\n",
+    "\n",
+    "Table 2: https://academic.oup.com/view-large/77947227"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Configure Jupyter so figures appear in the notebook\n",
     "%matplotlib inline\n",
     "\n",
-    "    # Configure Jupyter to display the assigned value after an assignment\n",
+    "# Configure Jupyter to display the assigned value after an assignment\n",
     "%config InteractiveShell.ast_node_interactivity='last_expr_or_assign'\n",
     "\n",
     "# import functions from the modsim.py module\n",
@@ -43,12 +59,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This model relies on a lot of stocks (11 to be specific). There are susceptible and infected stocks for all sleep values (As the contact rate is different for each). There is one recovered stock for all recovered individuals."
+    "# Model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This model relies on a lot of stocks (11 to be specific). There are susceptible and infected stocks for all sleep values, because the contact rate is different for each. There is one recovered stock for all recovered individuals."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,8 +114,10 @@
     "                 I5=I5, I6=I6, I7=I7, I8=I8, I9=I9, \n",
     "                 R=0)\n",
     "    init /= np.sum(init)\n",
+    "    \n",
+    "    #Time in days\n",
     "    t0 = 0\n",
-    "    t_end = 100 #Time in days\n",
+    "    t_end = 100 \n",
     "    \n",
     "\n",
     "    return System(init=init, t0=t0, t_end=t_end,\n",
@@ -101,8 +126,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The plot_results_all function plots the results of the model. "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,8 +155,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The plot_results_seperate function plots all the stocks seperately on the same plot. "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,8 +191,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The plot_population function generates a pie chart of the percentages of the population in each sleep category.  This will be helpful later on when we show different cases."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,15 +242,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Uses the make_system function to make a system. Having the make_system function makes changing the size of each sleep group and the initialInfected easy."
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {
     "scrolled": true
    },
@@ -298,12 +337,15 @@
        "dtype: object"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "\"\"\"Uses the make_system function to make a system. Having the make_system function makes \n",
+    "changing the size of each sleep group and the initialInfected easy.\"\"\"\n",
+    "\n",
     "sleepFive = 0.052\n",
     "sleepSix = 0.233\n",
     "sleepSeven = 0.427\n",
@@ -664,6 +706,27 @@
    ],
    "source": [
     "calc_total_infected(results)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Results"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Interpretation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Abstract"
    ]
   },
   {
