--- a/code/chap13ode.ipynb
+++ b/code/chap13ode.ipynb
@@ -678,6 +678,35 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Original\n",
+    "\n",
+    "def update_func(state, t, system):\n",
+    "    \"\"\"Update the SIR model.\n",
+    "    \n",
+    "    state: State (s, i, r)\n",
+    "    t: time\n",
+    "    system: System object\n",
+    "    \n",
+    "    returns: State (sir)\n",
+    "    \"\"\"\n",
+    "    s, i, r = state\n",
+    "\n",
+    "    infected = system.beta * i * s    \n",
+    "    recovered = system.gamma * i\n",
+    "    \n",
+    "    s -= infected\n",
+    "    i += infected - recovered\n",
+    "    r += recovered\n",
+    "    \n",
+    "    return State(S=s, I=i, R=r)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 20,
    "metadata": {},
    "outputs": [],
